--- a/backend/config/.env
+++ b/backend/config/.env
@@ -1,7 +1,7 @@
-DATABASE_USERNAME=postgres
-HOSTNAME=localhost
-DATABASE=postgres
-DATABASE_PASSWORD=ard1434
-DATABASE_PORT=5432
-AUTH_USERNAME=apitest
-AUTH_PASSWORD=test123
+DATABASE_USERNAME=
+HOSTNAME=
+DATABASE=
+DATABASE_PASSWORD=
+DATABASE_PORT=
+AUTH_USERNAME=
+AUTH_PASSWORD=
