--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "proxy": "http://localhost:5000",
+  "proxy": "https://rahatikcozum-6acawh9ol-ardcodings-projects.vercel.app/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.14.0",
